--- a/basic/web/css/site.css
+++ b/basic/web/css/site.css
@@ -2,7 +2,7 @@ html,
 body {
     height: 100%;
     text-align: center;
-    color: #e9a9b7;
+    color: #f7b5c4;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -83,11 +83,6 @@ h1 {
     border-bottom: 0.2px solid #ccc;
 }
 
-/* #020E35
-#E1A9B5
-#FDE2B0
-#FAA578 
-#93657C */
 
 .navbar-inverse .navbar-nav > li > a {
     color: #FDE2B0;
@@ -107,7 +102,7 @@ h1 {
 }
 
 .navbar-inverse .navbar-brand {
-    color: #e9a9b7;
+    color: #f7b5c4;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     letter-spacing: 2px;
     font-size: 24px;
@@ -119,7 +114,7 @@ h1 {
     background-color: #020a24;
     border-top: 1px solid #ccc;
     padding-top: 20px;
-    color: #93657C;
+    color: #FDE2B0;
 }
 
 
@@ -199,22 +194,43 @@ a.desc:after {
 
 
 #highscore {
-    font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    margin: 0 auto;
-
+    margin: 0 auto 4em auto;
+    border: 1px solid #64374e;
 }
   
-#highscore td, #highscore th {
+#highscore td {
     padding: 8px;
-    width: 150px;
+    width: 200px;
 }
 
 #highscore th {
     padding-top: 12px;
     padding-bottom: 12px;
-    background-color: #64374e;
-    color: white;
+    background-color: #FAA578;
+    color: #64374e;
+    text-align: center;
+}
+
+
+#histogram {
+    border-collapse: collapse;
+    margin: 0 auto 4em auto;
+    border: 1px solid #64374e;
+}
+  
+#histogram td, #histogram th {
+    padding: 8px;
+    width: 150px;
+}
+
+.histogram  {
+    width: 300px;
+    margin: 5em auto 0 auto;
+    padding: 12px;
+    background-color: #FAA578;
+    color: #64374e;
+    font-weight: bold;
     text-align: center;
 }
 
